
syntax = "proto3";


package protoclnt;

service Baclnt {

  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc Backup (BackupRequest) returns (BackupResponse) {}
  rpc Restore (RestoreRequest) returns (RestoreResponse) {}

}

message PingRequest {
  string ip = 1;
  
}

message PingResponse {
  string message = 1;
}


//BACKUP

message BackupRequest {
  string ip = 1;
  repeated string paths = 2;
}


message BackupResponse {
  repeated string validpaths = 1;

}


//RESTORE

message RestoreRequest {
  string ip = 1;
  int32 backupID = 2;
  bool wholeBackup = 3; // Whether we want to restore all files from backup with specific id
  repeated string restoreObjects = 4; // Can be dir or path
  string basePath = 5; // Where we want to place restore objects in different place
}



message RestoreResponse {
  string status = 1;
}
